# pyproject-templates

./: .pre-commit-config.yaml  README.md  bump-precommit-versions.sh  pyproject.toml  pyproject_stub.toml
.github/workflows/: bump_precommit_hooks.yml  release.yml
licenses/: MIT_LICENSE
src/: .pre-commit-config.yaml  config.py  config_setup.py  pyproject_stub.toml  setup.sh
src/licenses/: Apache-2.0.txt  MIT_LICENSE
src/templates/package/: .pre-commit-config.yaml  dependencies.txt  pyproject_stub.toml
src/templates/script/: .pre-commit-config.yaml  dependencies.txt  pyproject_stub.toml
